đănng nhập employee và admin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,13 @@ server.error.include-message=always
 server.error.include-binding-errors=always
 server.error.include-stacktrace=always
 server.error.include-exception=true
+
+# Thymeleaf Configuration
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+# Static Resources
+spring.web.resources.static-locations=classpath:/static/
+spring.mvc.static-path-pattern=/static/**
