--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,3 +45,8 @@ spring.thymeleaf.suffix=.html
 # Static Resources
 spring.web.resources.static-locations=classpath:/static/
 spring.mvc.static-path-pattern=/static/**
+
+
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
+spring.thymeleaf.cache=false
