--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,7 +43,7 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 # Static Resources
-spring.web.resources.static-locations=classpath:/static/
+#spring.web.resources.static-locations=classpath:/static/
 spring.mvc.static-path-pattern=/static/**
 
 
