--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,16 @@
 spring.application.name=Lumi
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/LumiScan?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/lumiscan?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=
 
 # JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
 
 # Connection Pool Configuration
 spring.datasource.hikari.maximum-pool-size=5
@@ -18,17 +20,20 @@ spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.max-lifetime=1200000
 
 # Logging Configuration
-spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate=ERROR
 logging.level.com.zaxxer.hikari=WARN
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                logging.level.org.springframework.security=DEBUG
-logging.level.com.example.Lumi=DEBUG
+logging.level.org.springframework.security=DEBUG
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
 # Disable open-in-view
 spring.jpa.open-in-view=false
 logging.level.com.example.Lumi=DEBUG
-logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework.security=DEBUG
+
+spring.jpa.properties.hibernate.type=trace
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Server Error Configuration
 server.error.include-message=always
@@ -49,4 +54,4 @@ spring.mvc.static-path-pattern=/static/**
 
 spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
-spring.thymeleaf.cache=false
+
